gccida/c1/ggc_mark_trees
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ggc_mark_trees/src/ggc-common.c:891:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ggc_mark_trees/src/ggc-common.c:1024:19: error: expected expression
v3 = ( tree_node *)*( ( _QWORD *)&ggc_pending_trees->name + elements_used); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ggc_mark_trees/src/ggc-common.c:1024:8: error: use of undeclared identifier 'tree_node'
v3 = ( tree_node *)*( ( _QWORD *)&ggc_pending_trees->name + elements_used); 
       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ggc_mark_trees/src/ggc-common.c:1153:26: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
rtl_op = first_rtl_op( ( tree_code)v27); 
                         ^~~~~~~~~
                         tree_cons
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ggc_mark_trees/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ggc_mark_trees/src/ggc-common.c:1153:36: error: expected ')'
rtl_op = first_rtl_op( ( tree_code)v27); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ggc_mark_trees/src/ggc-common.c:1153:22: note: to match this '('
rtl_op = first_rtl_op( ( tree_code)v27); 
                     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ggc_mark_trees/src/obj/ggc-common.o] Error 1
